2.ordersystem/k8s/k8s-ordersystem/redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: kukaeden
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis
          ports:
            - containerPort: 6379

---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: kukaeden
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: redis
