2.ordersystem/k8s/k8s-ordersystem/ingress.yml
# ingress-controller 설치 명령어
# kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.8.1/deploy/static/provider/aws/deploy.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order-backend-ingress
  namespace: kukaeden
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: my-issuer
spec:
  tls:
    - hosts:
        - "server.kukaeden417.shop"
      # https설정시에 TLS 인증서가 저장된 certificate의 Secret의 이름(spec.secretName)을 지정
      secretName: server-kukaeden417-com-tls
  rules:
    - host: server.kukaeden417.shop
      http:
        paths:
          - path: / #모든 url요청을 service로 라우팅
            pathType: Prefix
            backend:
              service:
                name: ordersystem-backend-service
                port:
                  number: 80
